--- a/src/app/Modules/professor/Components/student-list/student-list.component.html
+++ b/src/app/Modules/professor/Components/student-list/student-list.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Liste de la classe</mat-card-title>
+        <mat-card-title><h3>Liste de la classe</h3></mat-card-title>
         <mat-card-subtitle> {{ className}}</mat-card-subtitle>
     </mat-card-header>
 
