--- a/src/app/Modules/professor/Components/test-result/create-result/create-result.component.scss
+++ b/src/app/Modules/professor/Components/test-result/create-result/create-result.component.scss
@@ -13,3 +13,13 @@ mat-form-field{
     width: 25vw;
 
 }
+textarea{
+    font-weight:540;
+}
+input{
+    font-weight:540;
+}
+
+mat-select{
+    font-weight:540;
+}
