--- a/src/app/Modules/professor/Components/trimestrial-note/Update-note/update.component.scss
+++ b/src/app/Modules/professor/Components/trimestrial-note/Update-note/update.component.scss
@@ -12,3 +12,13 @@ mat-form-field{
     margin: 8px;
     width: 25vw;
 }
+textarea{
+    font-weight:540;
+}
+input{
+    font-weight:540;
+}
+
+mat-select{
+    font-weight:540;
+}
