--- a/src/app/Modules/User/Components/details/details.component.scss
+++ b/src/app/Modules/User/Components/details/details.component.scss
@@ -11,6 +11,13 @@ mat-card-content{
     flex-wrap: wrap;
 }
 
+.userDetailedButton:hover{
+    color:lightseagreen;
+    font-size:30px
+}
+
+
+
 
 .openedIcon{
     color: teal;
