lunch en cours (tri non fonctionnel)

--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -192,7 +192,7 @@
 
         <button mat-menu-item [matMenuTriggerFor]="StudentList" *ngIf="contactList.length > 0">
           <mat-icon>face</mat-icon>
-          <span>Au contact</span>
+          <span>Au(x) contact(s)</span>
         </button>
 
         <button mat-menu-item (click)="this.openEmailDialog('SchoolEmail@school.com')">
