--- a/src/app/Modules/professor/Components/student-list/student-list.component.scss
+++ b/src/app/Modules/professor/Components/student-list/student-list.component.scss
@@ -1,12 +1,15 @@
 mat-icon:hover{
     color:lightseagreen;
+    font-weight: bold;
     font-size:30px
 }
 
 label:hover{
-    color:black;
+    color:lightseagreen;
+
     font-weight: bold;
 }
+
 // img{
 //     border:none
 // }
