--- a/src/app/Modules/professor/Components/works/work-list/work-list.component.html
+++ b/src/app/Modules/professor/Components/works/work-list/work-list.component.html
@@ -1,13 +1,7 @@
-<H1 style="margin: 20px">Travaux</H1>
-<div style="margin: 20px">
-  <button mat-button color="war" [routerLink]="['../home']">Retour</button>
-  <button mat-button 
-    [color]="emptyMsg == true ? 'accent' : 'primary'" 
-    (click)="openCreateDialog()"
-    [class]="emptyMsg == true ? 'blink-1': ''"
-    >Créer</button>
-</div>
+<H1 style="margin: 40px">Travaux</H1>
+
 <!-- DEBUT SELECTION -->
+<div style="text-align: center;">
 <mat-form-field appearance="fill" style="margin: 20px; width: 250px;">
   <mat-label>Selectionnez les catégories</mat-label>
   <mat-select [formControl]="selectedCategories" multiple>
@@ -51,6 +45,7 @@
 
 <button mat-button color="" (click)="selectedChoices()">Chercher</button>
 <button mat-button color="" (click)="resetChoices()">Reset</button>
+</div>
 <!-- FIN SELECTIONS -->
 <div *ngIf="emptyMsg == true">
   <p style="text-align: center;">Il n'y a actuellement aucun contenu pour votre recherche, voulez vous en créer un ?</p>
@@ -137,4 +132,12 @@
       </mat-expansion-panel>
     </mat-accordion>
   </div>
+</div>
+<div style="margin: 40px;">
+  <button mat-button color="war" [routerLink]="['../home']">Retour</button>
+  <button mat-button 
+    [color]="emptyMsg == true ? 'accent' : 'primary'" 
+    (click)="openCreateDialog()"
+    [class]="emptyMsg == true ? 'blink-1': ''"
+    >Créer</button>
 </div>
