Side professor: LUNCH & Works fully working

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -4,13 +4,13 @@
 
       <mat-grid-tile [colspan]="2" [rowspan]="3">
         <mat-card class="dashboard-card">
-          <img mat-card-image style="height: 24vh;" src="../../../assets/bientot-construction-conception-fond-jaune_1017-25509.jpg"/>   
+  <img mat-card-image style="height: 24vh; filter: grayscale(1); " src="../../../assets/bientot-construction-conception-fond-jaune_1017-25509.jpg"/>   
         </mat-card>
       </mat-grid-tile>
 
       <mat-grid-tile [colspan]="2" [rowspan]="3" style="display: flex;">
         <mat-card class="dashboard-card">
-            <img mat-card-image style="height: 24vh;" src="../../../assets/bientot-construction-conception-fond-jaune_1017-25509.jpg"/>   
+            <img mat-card-image style="height: 24vh; filter: grayscale(1); " src="../../../assets/bientot-construction-conception-fond-jaune_1017-25509.jpg"/>   
         </mat-card>
       </mat-grid-tile>
 
