Lunch fully working -> have to check interface for conditional show button

--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -50,7 +50,7 @@
         <span>Profil</span>
       </button>
 
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['repas']">
         <mat-icon>fastfood</mat-icon>
         <span>Repas</span>
       </button>
