--- a/src/app/Components/send-mail/send-mail.component.html
+++ b/src/app/Components/send-mail/send-mail.component.html
@@ -36,7 +36,7 @@
             </mat-error>
 
         </mat-form-field>
-        <div>
+        <div style="text-align: center;">
             <button mat-dialog-close mat-raised-button color="accent" style="margin: 5px">Annuler</button>
 
             <button mat-raised-button type="submit" color="primary" style="margin: 5px"
