--- a/src/app/Modules/school/Components/school-rules/school-rules.component.html
+++ b/src/app/Modules/school/Components/school-rules/school-rules.component.html
@@ -1,4 +1,4 @@
-<button [style]="showRules == true ? 'margin:10px':'margin: 150px'" mat-icon-button [color]="showRules == true ?'primary':''" (click)="invertShowRules()">    
+<button style='margin:10px' mat-icon-button [color]="showRules == true ?'primary':''" (click)="invertShowRules()">    
     <mat-icon>construction</mat-icon>
     This is still under construction (but the content is actually hidden, you can click on me to check it :-))
 </button>
